@@ -4,9 +4,13 @@
 
 ==========更新日志==========
 
-
+==========5.2==========
+2024-
+1. button最大化宽度、最小化宽度参数
+*2. button2最大化宽度、最小化宽度参数
+3. 修复treeview跨级选定展开单层后的报错问题
 ==========5.1==========
-2024-7-
+2024-7-5
 1. test\tuxmltest.py 升级为简易TinUIxml编辑器
 2. 优化scalebar标识符元素
 3. BasicTinUI新增show_location方法，用于设计时反馈坐标信息
